install (FILES FFEA_trajectory.py FFEA_measurement.py FFEA_frame.py 
	 FFEA_binding_sites.py FFEA_kinetic_map.py FFEA_kinetic_rates.py
         FFEA_kinetic_states.py FFEA_material.py FFEA_node.py
         FFEA_pdb.py FFEA_pin.py FFEA_script.py FFEA_springs.py
         FFEA_stokes.py FFEA_surface.py FFEA_topology.py
         FFEA_vdw.py
         DESTINATION "${PYTHONSTUFF}/FFEA_python_modules")

