install (FILES __init__.py wrap.py FFEA_meta.py
         FFEA_trajectory.py FFEA_measurement.py FFEA_frame.py 
         FFEA_binding_sites.py FFEA_kinetic_map.py FFEA_kinetic_rates.py
         FFEA_kinetic_states.py FFEA_material.py FFEA_node.py
         FFEA_pdb.py FFEA_pin.py FFEA_script.py FFEA_springs.py
         FFEA_stokes.py FFEA_surface.py FFEA_topology.py FFEA_turbotrajectory.py
         FFEA_vdw.py FFEA_universe.py FFEA_lj.py FFEA_exceptions.py
         DESTINATION "${PYTHONSTUFF}/modules")

