# 
#  This file is part of the FFEA simulation package
#  
#  Copyright (c) by the Theory and Development FFEA teams,
#  as they appear in the README.md file. 
# 
#  FFEA is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
# 
#  FFEA is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
# 
#  You should have received a copy of the GNU General Public License
#  along with FFEA.  If not, see <http://www.gnu.org/licenses/>.
# 
#  To help us fund FFEA development, we humbly ask that you cite 
#  the research papers on the package.
#


add_subdirectory(bend_test)
add_subdirectory(parallel_transport_test)
add_subdirectory(rodrigues_test)
add_subdirectory(test_bend_against_mathematica)
add_subdirectory(test_bend_for_non_straight_equilibrium)
add_subdirectory(test_mutual_bend_against_mathematica)
add_subdirectory(test_parallel_transport)
add_subdirectory(translation_and_rotation_test)
add_subdirectory(twist_bend_independence)
add_subdirectory(twisted_stretch_test)
add_subdirectory(twist_bend_independence_v2)